# SearchEngine

./: .gitignore  CMakeLists.txt
include/: ConverterJSON.h  InvertedIndex.h  RelativeIndex.h  SearchEngine.h  version.h.in
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchEngine_test.cpp
